# agentray

./: .air.toml  .dockerignore  .env.example  .gitignore  DESIGN.md  Dockerfile  Dockerfile.browser  Dockerfile.computeruse  Dockerfile.sandbox  LICENSE  Makefile  README.md  ROADMAP.md  docker-compose.yml  go.mod  go.sum
agentcore/: agent.go  agent_realprovider_test.go  anthropic.go  anthropic_cache_encode_test.go  budget_gate_test.go  cache_retry_test.go  cacheanchor.go  cacheanchor_test.go  compaction.go  compaction_guard_test.go  compaction_test.go  contextedit.go  contextedit_test.go  credresolve_test.go  definition.go  embed.go  embed_test.go  env.go  faux.go  goalpin_test.go  harness_test.go  hooks.go  hooks_test.go  lab.go  lab_test.go  lifecycle_test.go  loop.go  loop_test.go  memory.go  openai.go  openai_sse_test.go  openai_status_test.go  permission.go  pricing.go  prompt.go  prompt_dedup_test.go  provider.go  registry.go  registry_test.go  retry.go  (+23 more)
docs/: AGENT-GOVERNANCE.md  ARCHITECT-AGENT-TEAM.md  ARCHITECT-AGENTGARDEN.md  ARCHITECT-API.md  ARCHITECT-WEB.md  DESIGN-CONVERSATION-STORE.md  DESIGN-DATA-ARCHITECTURE.md  DESIGN-GROWTH-AUTOPILOT.md  DESIGN-SIGNAL.md  DESIGN-SUBSCRIPTION-AUDIENCES.md  GROWER.md  HARNESS-REVIEW.md  IMPLEMENTATION-PLAN.md  PRODUCT-REVIEW.md  QUICKSTART.md  SDK.md  agent-teams-en.html  agent-teams-vi.html  agentcore-vi.html
infra/: cloudbuild.yaml
prototype/: app-signal.html  chat-signal.html
sdk/python/: README.md  pyproject.toml
sdk/python/agentray/: __init__.py  client.py
sdk/python/tests/: test_client.py
(+338 files in other folders)
